@@ -1,3 +1,7 @@
+Sat Jan  9 10:50:09 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* include/tds_sysdep_private.h src/tds/net.c:
+	- Defined and use a sock_strerror
+
 Sat Jan  9 10:33:10 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/tds/net.c: Avoid double definition
 
@@ -2054,4 +2058,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.2923 2010-01-09 09:33:17 freddy77 Exp $
+$Id: ChangeLog,v 1.2924 2010-01-09 09:50:16 freddy77 Exp $
